--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "book hub",
   "main": "app.js",
   "scripts": {
+    "start": "rimraf ./dist && babel -d ./dist ./src -s",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node dev.js"
+    "dev": "nodemon dev.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,11 +14,14 @@
     "babel-register": "^6.26.0",
     "eslint": "^4.11.0",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.8.0"
+    "eslint-plugin-import": "^2.8.0",
+    "nodemon": "^1.12.1"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-preset-env": "^1.6.1"
+    "babel-preset-env": "^1.6.1",
+    "lodash": "^4.17.4",
+    "rimraf": "^2.6.2"
   }
 }
