--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "description": "book hub",
   "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com:akholod/bookify.git"
+  },
   "scripts": {
     "start": "rimraf ./dist && babel -d ./dist ./src -s && node ./dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -28,6 +32,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "config": "^1.28.1",
     "lodash": "^4.17.4",
     "rimraf": "^2.6.2"
   }
