--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "config": "^1.28.1",
+    "koa": "^2.4.1",
+    "koa-bodyparser": "^4.2.0",
+    "koa-logger": "^3.1.0",
+    "koa-router": "^7.3.0",
     "lodash": "^4.17.4",
     "rimraf": "^2.6.2"
   }
