--- a/package.json
+++ b/package.json
@@ -35,9 +35,14 @@
     "config": "^1.28.1",
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
+    "koa-compress": "^2.0.0",
+    "koa-favicon": "^2.0.0",
     "koa-logger": "^3.1.0",
     "koa-router": "^7.3.0",
+    "koa-static": "^4.0.1",
+    "koa-views": "^6.1.2",
     "lodash": "^4.17.4",
+    "pug": "^2.0.0-rc.4",
     "rimraf": "^2.6.2"
   }
 }
